--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<nav>
+		<ul>
+			<li><a href="https://docs.google.com/spreadsheets/d/1Oq_DrFXXOnR4d-u1QwgWZyZEYdZ9g43QbbJozUIGGIw/edit#gid=0">Home</a></li>
+			<li><a href="https://docs.google.com/spreadsheets/d/1Oq_DrFXXOnR4d-u1QwgWZyZEYdZ9g43QbbJozUIGGIw/edit#gid=0">About us</a></li>
+			<li><a href="https://docs.google.com/spreadsheets/d/1Oq_DrFXXOnR4d-u1QwgWZyZEYdZ9g43QbbJozUIGGIw/edit#gid=0">Contact us</a></li>
+			
+		</ul>
+	</nav>
+	
+	<h1>3 random images</h1>
+	<image src="https://picsum.photos/id/123/200/300" alt=""></audio>
+	<image src="https://picsum.photos/id/124/200/300" alt=""></audio>
+	<image src="https://picsum.photos/id/125/200/300" alt=""></audio>
 
 </body>
 
